Uodate_Captain_Notebooks

--- a/Captain_Badge/QE_Badge1_Lab1.ipynb
+++ b/Captain_Badge/QE_Badge1_Lab1.ipynb
@@ -26,8 +26,7 @@
     "# Importing standard Qiskit libraries\n",
     "from qiskit import QuantumCircuit, transpile, assemble, Aer, IBMQ, execute\n",
     "from qiskit.quantum_info import Statevector\n",
-    "from qiskit.visualization import plot_bloch_multivector, plot_histogram\n",
-    "from qiskit_textbook.problems import dj_problem_oracle"
+    "from qiskit.visualization import plot_bloch_multivector, plot_histogram"
    ]
   },
   {
@@ -247,7 +246,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
