remove ref to email

--- a/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb
+++ b/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03d7ae33",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a533677",
    "metadata": {
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "258bc2ee",
    "metadata": {},
@@ -39,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e5fb6da-d64a-4120-a3cc-ab1e37367833",
    "metadata": {
@@ -53,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad238f12",
    "metadata": {},
@@ -79,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d811762",
    "metadata": {},
@@ -119,6 +125,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "299f21e2-b25d-4b3d-95db-40389f60a419",
    "metadata": {},
@@ -127,6 +134,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c585da8-60ed-4408-946d-c3b86759d231",
    "metadata": {},
@@ -139,6 +147,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e9f7da5-56cd-416e-ae75-0e044bf23dc6",
    "metadata": {},
@@ -147,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52db58a7-b1ef-4cdb-9fdf-12b8a5427bc1",
    "metadata": {},
@@ -161,6 +171,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9979fc12-fc34-4b7e-a099-631b131b1972",
    "metadata": {},
@@ -169,6 +180,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d80fb9b3-c5fb-4f8f-bedc-4ede30820c25",
    "metadata": {},
@@ -179,6 +191,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "133aebed-5942-4c23-a94d-fbcba0a2044b",
    "metadata": {
@@ -219,6 +232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "638fd7bb-b642-4d02-aa92-3263e05ed11b",
    "metadata": {
@@ -243,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44205c1e-e76f-4390-a73c-db8af35d8373",
    "metadata": {},
@@ -270,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e863ea74-249e-45d2-9e5e-007200606b3c",
    "metadata": {},
@@ -278,6 +294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c72f9aec-de6a-4668-8de6-da61c8c378c1",
    "metadata": {},
@@ -300,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e1a8f7ea-5967-404f-ab43-3675a4c0c10a",
    "metadata": {},
@@ -334,6 +352,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26b7d75e-ebed-49bc-9e31-3d570dd2242d",
    "metadata": {},
@@ -352,6 +371,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dc93da4-cd1b-4894-b388-f7edc7a997cc",
    "metadata": {},
@@ -366,6 +386,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9005172-89b5-41f3-b391-781c38951a76",
    "metadata": {
@@ -376,6 +397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b88b9d10-6cf6-4723-b33b-1e0494efed12",
    "metadata": {
@@ -415,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ad9114a-cfd5-43de-9319-263fae1ca9ba",
    "metadata": {},
@@ -435,6 +458,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03f0b1e9-3891-4556-a6c3-d3d48b81e14e",
    "metadata": {},
@@ -457,6 +481,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "749bd8b3-f80e-4405-ac8a-e4d8ce1e3f35",
    "metadata": {},
@@ -480,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3dbfb8d2-3da8-4567-9e64-d7e10b650c4a",
    "metadata": {},
@@ -501,6 +527,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ecb4a1c-4a2a-4de0-81b4-486819305665",
    "metadata": {},
@@ -524,6 +551,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b7d1e11-f6b0-41df-a974-56b83b140b2b",
    "metadata": {},
@@ -545,6 +573,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc23d50c-3b3a-4d1f-9fcb-2f991de384ed",
    "metadata": {},
@@ -569,6 +598,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0e29324-ae44-4bdb-8a9d-8e7a123a061c",
    "metadata": {},
@@ -577,6 +607,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ca08509-d58a-4f86-9ac7-a74e2df1d5b1",
    "metadata": {},
@@ -633,6 +664,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aecf7283-53d5-44f8-87cf-0468ee6a7831",
    "metadata": {},
@@ -652,6 +684,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd0a0a-f4dc-4e76-a635-465557709cde",
    "metadata": {},
@@ -671,6 +704,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8dc9814c-d035-46eb-a842-ec160771ed58",
    "metadata": {},
@@ -685,6 +719,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "749c3f06-e849-4d08-bcab-91036fbb483c",
    "metadata": {},
@@ -704,6 +739,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e958254-4023-4092-bffe-91ee2e85f9db",
    "metadata": {},
@@ -722,6 +758,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a5c73ecd-4660-44ab-8652-77226de58237",
    "metadata": {},
@@ -742,6 +779,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6cee0df-32ef-4f65-bac6-8457eaf4709e",
    "metadata": {},
@@ -780,6 +818,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ff79ece4-f935-42ed-9f81-9ca4fcd7afec",
    "metadata": {},
@@ -788,6 +827,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "837ee3e2-1fda-41b1-be65-2a755cd42e7d",
    "metadata": {},
@@ -800,6 +840,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22fa8e7a-943b-4b40-a503-6a48960091ba",
    "metadata": {},
@@ -829,6 +870,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10e61dc8-3247-4eb8-ba5e-29ca7d4b4330",
    "metadata": {},
@@ -837,6 +879,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "15b164bb-3446-40dd-b533-7bdca59b5658",
    "metadata": {},
@@ -858,6 +901,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b95f7ab0-4f3b-49a2-b16e-78e23947d144",
    "metadata": {},
@@ -940,6 +984,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e2903bb-a0ce-44ed-9b46-3d20582663e3",
    "metadata": {},
@@ -948,6 +993,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5949e5ed-cb18-4408-af04-6d656b2860b9",
    "metadata": {},
@@ -964,6 +1010,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03570422-c77e-49c5-8c9e-e98c07ef030c",
    "metadata": {},
@@ -1004,6 +1051,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed4dabd8-f644-4367-8cd1-f63fb2033481",
    "metadata": {},
@@ -1031,6 +1079,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90ea5e88-91f9-4791-8e45-506b1564d8ed",
    "metadata": {},
@@ -1041,6 +1090,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d8f68c2-2135-4b4d-a657-a3e64a75c409",
    "metadata": {},
@@ -1061,6 +1111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7968b1b6-be93-465c-b7e8-a3063154a86f",
    "metadata": {},
@@ -1089,6 +1140,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "61806e53-9d45-4d92-8ce6-abac10376788",
    "metadata": {},
@@ -1107,6 +1159,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e9b1930-5544-477b-b718-8fd723bccb6d",
    "metadata": {},
@@ -1152,6 +1205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "044a4345-359d-494e-8013-15de735c59cd",
    "metadata": {},
@@ -1165,6 +1219,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f08f1327-6508-4a0f-b718-90e1856e3049",
    "metadata": {},
@@ -1184,6 +1239,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70f55b8a-c04f-484c-bdb4-54c46063eb8e",
    "metadata": {},
@@ -1192,6 +1248,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dda29c13-1985-4782-a089-927803485163",
    "metadata": {
@@ -1285,6 +1342,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c9ae7fa1-4562-47c1-9e08-429ca3725d0c",
    "metadata": {},
@@ -1303,6 +1361,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "153125d8-cfc0-4e3d-953b-f73ec87d05fa",
    "metadata": {},
@@ -1311,6 +1370,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20a00358-836f-4331-a219-6dacdf0cba08",
    "metadata": {
@@ -1323,6 +1383,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2cc53f12-11a0-4e1e-88bb-fb6f69d07bc5",
    "metadata": {},
@@ -1347,6 +1408,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13f3a75f-7530-4376-abb4-f851a9643846",
    "metadata": {},
@@ -1400,6 +1462,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "91c270f4-6b5a-4bb2-a833-9a5c87f58002",
    "metadata": {
@@ -1517,6 +1580,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26a81342-77f1-41bb-b52e-6fd77463fcd4",
    "metadata": {},
@@ -1563,6 +1627,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a762b5db-f3c8-443d-9e53-6634304980cb",
    "metadata": {},
@@ -1581,6 +1646,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4343fe26-974a-477e-8c6e-3372a9569cee",
    "metadata": {},
@@ -1589,6 +1655,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b5fd7239-13b4-4796-a498-343767d61498",
    "metadata": {},
@@ -1605,6 +1672,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "032e117e-3c43-48f1-9008-83225411b4ce",
    "metadata": {
@@ -1681,6 +1749,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9463f73b-f0d5-4a7f-a60c-175c809add04",
    "metadata": {},
@@ -1689,6 +1758,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23169b2a-40f1-4bc6-bce8-54728c65f5fc",
    "metadata": {
@@ -1708,6 +1778,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7e5af1e1-5a51-48d5-84c2-916a0e8ecb8c",
    "metadata": {},
@@ -1722,6 +1793,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c5299da5-2e40-4df9-b04d-2b74dfe38695",
    "metadata": {},
@@ -1730,6 +1802,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e815c51a-27ee-4325-8002-25ec6a441642",
    "metadata": {},
@@ -1746,7 +1819,7 @@
    "source": [
     "from qiskit import IBMQ\n",
     "IBMQ.load_account()\n",
-    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main') # Change according to the email provided"
+    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')"
    ]
   },
   {
@@ -1760,6 +1833,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d30c7964-d47d-4762-b85e-7620d2ccb73f",
    "metadata": {},
@@ -1779,6 +1853,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12cb6437-6ba5-476b-9174-672bfec1c196",
    "metadata": {},
@@ -1832,6 +1907,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3daf9d4-e553-41c7-852d-636e87e94272",
    "metadata": {},
@@ -1895,6 +1971,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4a12e825-9ed1-47a8-b830-1b7c59ddab42",
    "metadata": {},
@@ -1903,6 +1980,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aca15f3b-c110-4789-8af5-fe20d0beddb9",
    "metadata": {
@@ -1944,6 +2022,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12c740a6-3ec8-4e24-af2b-45efed79caf4",
    "metadata": {
@@ -1954,6 +2033,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dc4ec4a-cc61-472d-833b-fc456f230141",
    "metadata": {},
@@ -1962,6 +2042,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4a42ae60-fd6f-4551-b9cf-347a55225992",
    "metadata": {
@@ -1985,6 +2066,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36b24093-7710-4d80-bfa9-01fd97abbb27",
    "metadata": {
@@ -2011,6 +2093,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c475f93-b024-4ec6-95f2-44350fa31e5d",
    "metadata": {},
@@ -2019,6 +2102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "374f2e75-a05a-4317-b6d5-a3194c2195ef",
    "metadata": {},
@@ -2031,6 +2115,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c33aa0b0-7217-4499-b0bc-a967051986e8",
    "metadata": {},
@@ -2153,6 +2238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3389973b-ed19-46f6-b596-cad702f32533",
    "metadata": {},
@@ -2195,6 +2281,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b0c1605a-e44d-489b-9ad7-54cc4b8586fa",
    "metadata": {
@@ -2223,6 +2310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1cbb2b3c-aa1c-4a12-9462-d9528651640b",
    "metadata": {},
@@ -2237,6 +2325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95055945",
    "metadata": {},
