--- a/Time_Traveler_Badge/2023/QE_Badge4_Lab3_QEM_Advanced.ipynb
+++ b/Time_Traveler_Badge/2023/QE_Badge4_Lab3_QEM_Advanced.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a533677",
    "metadata": {
@@ -15,6 +16,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b5fd7239-13b4-4796-a498-343767d61498",
    "metadata": {},
@@ -33,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "032e117e-3c43-48f1-9008-83225411b4ce",
    "metadata": {
@@ -55,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64be824f-5d15-4ac7-bc44-64927f2b5de6",
    "metadata": {},
@@ -69,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23169b2a-40f1-4bc6-bce8-54728c65f5fc",
    "metadata": {
@@ -129,7 +134,6 @@
     "# If you need to overwrite the account info, please add `overwrite=True`\n",
     "# QiskitRuntimeService.save_account(channel='ibm_quantum', token='my_token', overwrite=True)\n",
     "\n",
-    "# Change 'instance' according to the email sent to you when you registered for Quantum Explorers:\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\", instance='ibm-q/open/main')\n",
     "\n",
     "backend = service.backends(simulator=True)[0]\n",
@@ -158,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f07ef407-2918-4a44-9060-f7b5b90c0334",
    "metadata": {},
@@ -234,6 +239,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7e5af1e1-5a51-48d5-84c2-916a0e8ecb8c",
    "metadata": {},
@@ -263,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3daf9d4-e553-41c7-852d-636e87e94272",
    "metadata": {},
@@ -309,6 +316,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a6b7aae-1300-403f-802d-4366d17c1319",
    "metadata": {},
@@ -334,6 +342,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1cbb2b3c-aa1c-4a12-9462-d9528651640b",
    "metadata": {},
