--- a/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023.ipynb
+++ b/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03d7ae33",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a533677",
    "metadata": {
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "258bc2ee",
    "metadata": {},
@@ -39,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e5fb6da-d64a-4120-a3cc-ab1e37367833",
    "metadata": {
@@ -53,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad238f12",
    "metadata": {},
@@ -79,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d811762",
    "metadata": {},
@@ -119,6 +125,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "299f21e2-b25d-4b3d-95db-40389f60a419",
    "metadata": {},
@@ -127,6 +134,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c585da8-60ed-4408-946d-c3b86759d231",
    "metadata": {},
@@ -139,6 +147,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e9f7da5-56cd-416e-ae75-0e044bf23dc6",
    "metadata": {},
@@ -147,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52db58a7-b1ef-4cdb-9fdf-12b8a5427bc1",
    "metadata": {},
@@ -161,6 +171,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9979fc12-fc34-4b7e-a099-631b131b1972",
    "metadata": {},
@@ -169,6 +180,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d80fb9b3-c5fb-4f8f-bedc-4ede30820c25",
    "metadata": {},
@@ -179,6 +191,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "133aebed-5942-4c23-a94d-fbcba0a2044b",
    "metadata": {
@@ -219,6 +232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "638fd7bb-b642-4d02-aa92-3263e05ed11b",
    "metadata": {
@@ -243,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44205c1e-e76f-4390-a73c-db8af35d8373",
    "metadata": {},
@@ -270,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e863ea74-249e-45d2-9e5e-007200606b3c",
    "metadata": {},
@@ -278,6 +294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c72f9aec-de6a-4668-8de6-da61c8c378c1",
    "metadata": {},
@@ -300,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e1a8f7ea-5967-404f-ab43-3675a4c0c10a",
    "metadata": {},
@@ -334,6 +352,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26b7d75e-ebed-49bc-9e31-3d570dd2242d",
    "metadata": {},
@@ -352,6 +371,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dc93da4-cd1b-4894-b388-f7edc7a997cc",
    "metadata": {},
@@ -366,6 +386,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9005172-89b5-41f3-b391-781c38951a76",
    "metadata": {
@@ -376,6 +397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b88b9d10-6cf6-4723-b33b-1e0494efed12",
    "metadata": {
@@ -415,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ad9114a-cfd5-43de-9319-263fae1ca9ba",
    "metadata": {},
@@ -435,6 +458,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03f0b1e9-3891-4556-a6c3-d3d48b81e14e",
    "metadata": {},
@@ -457,6 +481,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "749bd8b3-f80e-4405-ac8a-e4d8ce1e3f35",
    "metadata": {},
@@ -480,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3dbfb8d2-3da8-4567-9e64-d7e10b650c4a",
    "metadata": {},
@@ -501,6 +527,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ecb4a1c-4a2a-4de0-81b4-486819305665",
    "metadata": {},
@@ -524,6 +551,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b7d1e11-f6b0-41df-a974-56b83b140b2b",
    "metadata": {},
@@ -545,6 +573,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc23d50c-3b3a-4d1f-9fcb-2f991de384ed",
    "metadata": {},
@@ -569,6 +598,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0e29324-ae44-4bdb-8a9d-8e7a123a061c",
    "metadata": {},
@@ -577,6 +607,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ca08509-d58a-4f86-9ac7-a74e2df1d5b1",
    "metadata": {},
@@ -642,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "63b0fdef-4e51-4825-a832-ba69547799aa",
    "metadata": {},
@@ -655,6 +687,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aecf7283-53d5-44f8-87cf-0468ee6a7831",
    "metadata": {},
@@ -674,6 +707,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd0a0a-f4dc-4e76-a635-465557709cde",
    "metadata": {},
@@ -693,6 +727,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8dc9814c-d035-46eb-a842-ec160771ed58",
    "metadata": {},
@@ -707,6 +742,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "749c3f06-e849-4d08-bcab-91036fbb483c",
    "metadata": {},
@@ -726,6 +762,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e958254-4023-4092-bffe-91ee2e85f9db",
    "metadata": {},
@@ -744,6 +781,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a5c73ecd-4660-44ab-8652-77226de58237",
    "metadata": {},
@@ -764,6 +802,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6cee0df-32ef-4f65-bac6-8457eaf4709e",
    "metadata": {},
@@ -802,6 +841,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ff79ece4-f935-42ed-9f81-9ca4fcd7afec",
    "metadata": {},
@@ -810,6 +850,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "837ee3e2-1fda-41b1-be65-2a755cd42e7d",
    "metadata": {},
@@ -822,6 +863,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22fa8e7a-943b-4b40-a503-6a48960091ba",
    "metadata": {},
@@ -851,6 +893,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10e61dc8-3247-4eb8-ba5e-29ca7d4b4330",
    "metadata": {},
@@ -859,6 +902,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "15b164bb-3446-40dd-b533-7bdca59b5658",
    "metadata": {},
@@ -880,6 +924,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b95f7ab0-4f3b-49a2-b16e-78e23947d144",
    "metadata": {},
@@ -962,6 +1007,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e2903bb-a0ce-44ed-9b46-3d20582663e3",
    "metadata": {},
@@ -970,6 +1016,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5949e5ed-cb18-4408-af04-6d656b2860b9",
    "metadata": {},
@@ -986,6 +1033,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03570422-c77e-49c5-8c9e-e98c07ef030c",
    "metadata": {},
@@ -1026,6 +1074,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4e5f665-48e9-4594-91df-8ac7d75b21ca",
    "metadata": {},
@@ -1039,6 +1088,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed4dabd8-f644-4367-8cd1-f63fb2033481",
    "metadata": {},
@@ -1066,6 +1116,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90ea5e88-91f9-4791-8e45-506b1564d8ed",
    "metadata": {},
@@ -1076,6 +1127,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d8f68c2-2135-4b4d-a657-a3e64a75c409",
    "metadata": {},
@@ -1096,6 +1148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7968b1b6-be93-465c-b7e8-a3063154a86f",
    "metadata": {},
@@ -1124,6 +1177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "61806e53-9d45-4d92-8ce6-abac10376788",
    "metadata": {},
@@ -1142,6 +1196,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e9b1930-5544-477b-b718-8fd723bccb6d",
    "metadata": {},
@@ -1187,6 +1242,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "044a4345-359d-494e-8013-15de735c59cd",
    "metadata": {},
@@ -1200,6 +1256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f08f1327-6508-4a0f-b718-90e1856e3049",
    "metadata": {},
@@ -1219,6 +1276,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70f55b8a-c04f-484c-bdb4-54c46063eb8e",
    "metadata": {},
@@ -1227,6 +1285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dda29c13-1985-4782-a089-927803485163",
    "metadata": {
@@ -1320,6 +1379,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44fe67d1-ef5f-40de-b842-ecdfe1c75c23",
    "metadata": {},
@@ -1333,6 +1393,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c9ae7fa1-4562-47c1-9e08-429ca3725d0c",
    "metadata": {},
@@ -1351,6 +1412,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "153125d8-cfc0-4e3d-953b-f73ec87d05fa",
    "metadata": {},
@@ -1359,6 +1421,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20a00358-836f-4331-a219-6dacdf0cba08",
    "metadata": {
@@ -1371,6 +1434,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2cc53f12-11a0-4e1e-88bb-fb6f69d07bc5",
    "metadata": {},
@@ -1395,6 +1459,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13f3a75f-7530-4376-abb4-f851a9643846",
    "metadata": {},
@@ -1447,6 +1512,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89260775-e846-4bb4-8edd-6a8065964d6a",
    "metadata": {},
@@ -1573,6 +1639,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26a81342-77f1-41bb-b52e-6fd77463fcd4",
    "metadata": {},
@@ -1619,6 +1686,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a762b5db-f3c8-443d-9e53-6634304980cb",
    "metadata": {},
@@ -1637,6 +1705,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4343fe26-974a-477e-8c6e-3372a9569cee",
    "metadata": {},
@@ -1645,6 +1714,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b5fd7239-13b4-4796-a498-343767d61498",
    "metadata": {},
@@ -1661,6 +1731,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "032e117e-3c43-48f1-9008-83225411b4ce",
    "metadata": {
@@ -1743,6 +1814,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9463f73b-f0d5-4a7f-a60c-175c809add04",
    "metadata": {},
@@ -1751,6 +1823,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23169b2a-40f1-4bc6-bce8-54728c65f5fc",
    "metadata": {
@@ -1770,6 +1843,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7e5af1e1-5a51-48d5-84c2-916a0e8ecb8c",
    "metadata": {},
@@ -1784,6 +1858,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c5299da5-2e40-4df9-b04d-2b74dfe38695",
    "metadata": {},
@@ -1792,6 +1867,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e815c51a-27ee-4325-8002-25ec6a441642",
    "metadata": {},
@@ -1810,7 +1886,7 @@
    "source": [
     "from qiskit import IBMQ\n",
     "IBMQ.load_account()\n",
-    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main') # Change according to the email provided"
+    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')"
    ]
   },
   {
@@ -1826,6 +1902,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d30c7964-d47d-4762-b85e-7620d2ccb73f",
    "metadata": {},
@@ -1847,6 +1924,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee32384b",
    "metadata": {},
@@ -1863,11 +1941,12 @@
    },
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\", instance='ibm-q/open/main') # Change according to the email provided\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum\", instance='ibm-q/open/main')\n",
     "backend = service.backend(backend.name())"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12cb6437-6ba5-476b-9174-672bfec1c196",
    "metadata": {},
@@ -1927,6 +2006,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3daf9d4-e553-41c7-852d-636e87e94272",
    "metadata": {},
@@ -1973,6 +2053,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4a12e825-9ed1-47a8-b830-1b7c59ddab42",
    "metadata": {},
@@ -1981,6 +2062,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aca15f3b-c110-4789-8af5-fe20d0beddb9",
    "metadata": {
@@ -2022,6 +2104,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e49783f7-f4e0-49f9-99b2-935b9006db59",
    "metadata": {},
@@ -2035,6 +2118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12c740a6-3ec8-4e24-af2b-45efed79caf4",
    "metadata": {
@@ -2045,6 +2129,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dc4ec4a-cc61-472d-833b-fc456f230141",
    "metadata": {},
@@ -2053,6 +2138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4a42ae60-fd6f-4551-b9cf-347a55225992",
    "metadata": {
@@ -2076,6 +2162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36b24093-7710-4d80-bfa9-01fd97abbb27",
    "metadata": {
@@ -2102,6 +2189,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c475f93-b024-4ec6-95f2-44350fa31e5d",
    "metadata": {},
@@ -2110,6 +2198,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "374f2e75-a05a-4317-b6d5-a3194c2195ef",
    "metadata": {},
@@ -2122,6 +2211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c33aa0b0-7217-4499-b0bc-a967051986e8",
    "metadata": {},
@@ -2240,6 +2330,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7f141428-f65e-45f6-b31a-7acf67a93298",
    "metadata": {},
@@ -2253,6 +2344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3389973b-ed19-46f6-b596-cad702f32533",
    "metadata": {},
@@ -2295,6 +2387,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b0c1605a-e44d-489b-9ad7-54cc4b8586fa",
    "metadata": {
@@ -2323,6 +2416,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3d407ff-dec0-44a1-9ed9-9e5314314668",
    "metadata": {},
@@ -2336,6 +2430,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1cbb2b3c-aa1c-4a12-9462-d9528651640b",
    "metadata": {},
@@ -2350,6 +2445,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95055945",
    "metadata": {},
