Update TT lab 2 answer link

--- a/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023.ipynb
+++ b/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023.ipynb
@@ -681,7 +681,7 @@
     "<a id=\"exercise1\"></a>\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/quantum-kittens/quantum-explorers-23/blob/main/time%20traveler/quantum_challenge_fall_22_lab1_soln.ipynb)!\n",
+    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/qiskit-community/quantum-explorers/blob/main/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb)!\n",
     "\n",
     "</div>"
    ]
@@ -1082,7 +1082,7 @@
     "<a id=\"exercise1\"></a>\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/quantum-kittens/quantum-explorers-23/blob/main/time%20traveler/quantum_challenge_fall_22_lab1_soln.ipynb)!\n",
+    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/qiskit-community/quantum-explorers/blob/main/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb)!\n",
     "\n",
     "</div>"
    ]
@@ -1387,7 +1387,7 @@
     "<a id=\"exercise1\"></a>\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/quantum-kittens/quantum-explorers-23/blob/main/time%20traveler/quantum_challenge_fall_22_lab1_soln.ipynb)!\n",
+    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/qiskit-community/quantum-explorers/blob/main/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb)!\n",
     "\n",
     "</div>"
    ]
@@ -2112,7 +2112,7 @@
     "<a id=\"exercise1\"></a>\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/quantum-kittens/quantum-explorers-23/blob/main/time%20traveler/quantum_challenge_fall_22_lab1_soln.ipynb)!\n",
+    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/qiskit-community/quantum-explorers/blob/main/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb)!\n",
     "\n",
     "</div>"
    ]
@@ -2338,7 +2338,7 @@
     "<a id=\"exercise1\"></a>\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/quantum-kittens/quantum-explorers-23/blob/main/time%20traveler/quantum_challenge_fall_22_lab1_soln.ipynb)!\n",
+    "Check your answers using the solutions notebook provided in the syllabus [here](https://github.com/qiskit-community/quantum-explorers/blob/main/Time_Traveler_Badge/2023/QE_Badge4_Lab2_QEM_IQC2022Fall_1_2023_solution.ipynb)!\n",
     "\n",
     "</div>"
    ]
